--- a/style/style.css
+++ b/style/style.css
@@ -137,7 +137,7 @@ main{
 /* card section styles */
 
 #card {
-  background-image: url(img/capa_bg_new.png);
+  background-image: url(../img/capa_bg_new.png);
   width: 100%;
   height: 100vh;
   background-size: cover;
@@ -327,16 +327,16 @@ span {
   border: 1px solid #088178;
 }
 #banners .big-banners-1 {
-  background-image: url(img/primavera.jpg);
+  background-image: url(../img/primavera.jpg);
 }
 #banners .big-banners-2 {
-  background-image: url(img/outono.jpg);
+  background-image: url(../img/outono.jpg);
 }
 
 /* noticias section styles */
 
 #noticias {
-  background-image: url(images/banner/b14.png);
+  background-image: url(../img/b14.png);
   background-repeat: no-repeat;
   background-position: 180px;
   background-color: #041e42;
