--- a/style/style.css
+++ b/style/style.css
@@ -181,6 +181,7 @@ main{
 /* feature section styles */
 
 #habilidades {
+  flex-wrap: wrap;
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -296,6 +297,7 @@ span {
 }
 #banners .big-banners {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
 }
