--- a/public/style/styleCadastroProduto.css
+++ b/public/style/styleCadastroProduto.css
@@ -137,6 +137,7 @@ main{
   }
   .formbold-btn:hover {
     box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.05);
+    background: orange;
   }
 
   @media screen and (max-width: 730px) {
