add listar produtos

--- a/ecomarketifsp-app/src/components/header/Header.css
+++ b/ecomarketifsp-app/src/components/header/Header.css
@@ -1,4 +1,8 @@
 /* Estilos gerais */
+header{
+  position: fixed;
+  width: 100%;
+}
 #header {
     display: flex;
     justify-content: space-between;
