--- a/ecomarketifsp-app/src/components/main/Main.css
+++ b/ecomarketifsp-app/src/components/main/Main.css
@@ -78,6 +78,11 @@ main {
     font-weight: 700;
     color: #088178;
     padding: 10px 50px 10px 50px;
+    
+}
+
+#card button a:link{
+    text-decoration: none;
 }
 
 #card button:hover {
