--- a/ecomarketifsp-app/src/components/header/Header.css
+++ b/ecomarketifsp-app/src/components/header/Header.css
@@ -26,6 +26,10 @@
   display: inline;
 }
 
+.header-list-nav ul li a {
+  cursor: pointer;
+}
+
 .header-list-nav ul li:hover {
   font-weight: 900;
 }
