--- a/ecomarketifsp-app/src/components/main/Main.css
+++ b/ecomarketifsp-app/src/components/main/Main.css
@@ -64,8 +64,14 @@ main {
 #card h1 {
     color: #088178;
     font-size: 70px;
-
 }
+
+#card p {
+    color: #feffff;
+    font-size: 20px;
+    font-weight: 300;
+}
+
 
 #card button {
     background-color: var(--cor-cabecalho);
