--- a/ecomarketifsp-app/src/components/main/Main.css
+++ b/ecomarketifsp-app/src/components/main/Main.css
@@ -40,7 +40,7 @@ main {
 /* card section styles */
 
 #card {
-    background-image: url(../../assets/img/capa_bg_new.png);
+    background-image: url(../../assets/img/bg_home.png);
     width: 100%;
     height: 100vh;
     background-size: cover;
