--- a/ecomarketifsp-app/src/components/produtosList/ProdutosList.css
+++ b/ecomarketifsp-app/src/components/produtosList/ProdutosList.css
@@ -50,20 +50,23 @@
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 20px; */
     display: flex;
+    width: 100%;
+    flex-direction: row;
+    justify-content: flex-start;
     flex-wrap: wrap;
 }
 
 /* Cartão de produto */
 .produto-card-ls {
     background-color: antiquewhite;
-    width: 19%;
+    width: 24%;
     border: 1px solid #ddd;
     border-radius: 8px;
     padding: 40px;
     text-align: center;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s, box-shadow 0.3s;
-    margin: 9px;
+    margin: 7px;
 }
 
 .produto-card-ls:hover {
